<resources>
    <string name="app_name">Zero</string>
    <string name="s0">ZERO</string>
    <string name="s1">ONE</string>
    <string name="s2">TWO</string>
    <string name="s3">THREE</string>
    <string name="s4">FOUR</string>
    <string name="s5">FIVE</string>
    <string name="s6">SIX</string>
    <string name="s7">SEVEN</string>
    <string name="s8">EIGHT</string>
    <string name="s9">25%W X 75%H</string>
</resources>
